[package]
name = "granitedb"
version = "0.1.0"
edition = "2024"

[dependencies]
crc32c = "0.6"
thiserror = "2"
loom = { version = "0.7", optional = true }
lz4_flex = "0.11"

[features]
fuzzing = []
loom = ["dep:loom"]

[dev-dependencies]
proptest = "1"
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "db"
harness = false
